--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,7 +1,14 @@
 .Nav{
-    background-color: red;
-    height: 100vh;
-    width: 18%;
-    margin: 0;
+    background: rgba(0, 0, 0, 0.3);
+    height: 96.5vh;
+    width: 15%;
+    margin-top: 1.5vh;
     padding: 0;
+}
+
+.Title{
+    padding-top: 2.5rem;
+    padding-right: .5rem;
+    text-align: right;
+    font-size: 3rem;
 }
