--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap');
 :root {
   background: rgb(90,115,214);
   background: radial-gradient(circle, rgba(90,115,214,1) 0%, rgba(42,96,161,1) 100%);
 }
 body{
+  font-family: Chivo Mono;
   margin: 0;
 }
