--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -2,7 +2,7 @@
     background: rgba(0, 0, 0, 0.3);
     height: 96.5vh;
     width: 15%;
-    margin-top: 1.5vh;
+    margin-top: 1rem;
     padding: 0;
 }
 
