--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -9,6 +9,13 @@
 .Title{
     padding-top: 2.5rem;
     padding-right: .5rem;
+    padding-bottom: 3rem;
     text-align: right;
     font-size: 3rem;
+}
+
+.menuList {
+    text-align: right;
+    padding-right: .5rem;
+    font-size: 1.5rem;
 }
