--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,9 +1,10 @@
 .Nav{
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.1);
     height: 96.5vh;
     width: 15%;
     margin-top: .5rem;
     padding: 0;
+    border-radius: 7px;
 }
 
 .Title{
@@ -28,3 +29,8 @@
 .element{
     padding-bottom: 1.5rem;
 }
+
+.menuButton:hover{
+    color: white;
+}
+
