--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 :root {
-  background: rgb(90,115,214);
-  background: radial-gradient(circle, rgba(90,115,214,1) 0%, rgba(42,96,161,1) 100%);
+  background: rgb(231,231,231);
+  background: radial-gradient(circle, rgba(231,231,231,1) 0%, rgba(200,200,200,1) 100%);
 }
 body{
-  font-family: Chivo Mono;
+  font-family: 'Barlow', sans-serif;
 }
