--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -17,20 +17,23 @@
 
 .menuList {
     text-align: right;
-    padding-right: .5rem;
+    padding-right: .8rem;
     font-size: 1.5rem;
 }
 
 .menuButton {
     color: black;
     text-decoration: none;
+    position: relative;
+    left: 0;
+    transition-duration: .4s;
+}
+
+.menuButton:hover{
+    color: rgb(128, 126, 126);
+    left: -10px;
 }
 
 .element{
     padding-bottom: 1.5rem;
 }
-
-.menuButton:hover{
-    color: white;
-}
-
