added inout boxes for email and password

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -19,3 +19,11 @@
 .infoMessage{
     padding-top: 3vh;
 }
+
+.emailInput{
+    width: 15vw;
+    height: 25px;
+    border-radius: 10px;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
